# kea_viewer

./: Cargo.toml  README.md
deployment/: Dockerfile
rc/rc.conf.d/: kea_viewer
rc/rc.d/: kea_viewer
src/: config.rs  lease.rs  main.rs  server.rs  viewer.rs
templates/: leases.html  test.html
tests/: dhcp4.leases
